--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.username=${DB_USER:orders}
 spring.datasource.password=${DB_PASSWORD:orders}
 
 # JPA / Hibernate
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # Kafka
@@ -26,3 +26,10 @@ management.health.db.enabled=true
 
 # App
 app.kafka.order-events-topic=${ORDER_EVENTS_TOPIC:order-events}
+
+# Liquibase
+spring.liquibase.enabled=true
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
+spring.liquibase.default-schema=public
+spring.liquibase.liquibase-schema=public
+spring.liquibase.drop-first=false
